# mrpov3_gine_explainers

./: .gitignore  all-graph-diagnostics_report.md  check_all.sh  context.md  explain_run_substeps_refactor_1518067a.plan.md  general_report_co.md  jury_implementation.md  m.md  metrics.tex  new_params_values.md  normalized-entropy_report.md  pgexpl-degenerate_report.md  pgmexpl-misclass_report.md  plan_representation_improve.md  pyg-fidelity-definition_report.md  result_description.md  signed-fsuf-fcom_report.md  strict-json_report.md
doc/: ToDo.txt  chat.md  (+3 more)
mprov3_dui/: README.md  pyproject.toml
mprov3_dui/src/mprov3_dui/: __init__.py  _cli.py  app.py  ff1_tables.py  latex_export.py  paths.py  ranking.py  report_wall_times.py
mprov3_explainer/: .gitignore  README.md  pyproject.toml
mprov3_explainer/scripts/: export_labeled_explanation_sample.py  generate_visualizations.py  highlight_ff1_extremes.py  run_explanations.py  test_subgraphx_import.py
mprov3_explainer/src/mprov3_explainer/: __init__.py  captum_leaf_explainer.py  comparison_report_html.py  device.py  explainers.py  integrated_gradients_edge.py  integrated_gradients_node.py  json_utils.py  paths.py  pipeline.py  preprocessing.py  visualize.py  web_report.py
mprov3_explainer/tests/: test_end_to_end.py  test_json_utils.py  test_pipeline.py  test_preprocessing.py
mprov3_explainer/web/: app.js  index.html  styles.css
mprov3_gine/: README.md  build_dataset.py  check_PyG_data_format.py  check_raw_data_format.py  classification.py  classify.py  cli_common.py  config.py  create_classification_report.py  create_evaluation_report.py  dataset.py  evaluate.py  evaluation.py  loaders.py  model.py  pyproject.toml  requirements.txt  run_pipeline.sh  stratified_cv_train.py  train.py  train_epoch.py  train_stratified_cv.py  utils.py  validation.py  visualize_graphs.py
mprov3_gine/results/classifications/: 5RGV.html  5RGX.html  5RH2.html  5RH3.html  6M2N.html  7B2J.html  7CA8.html  7DDC.html  7EN8.html  7EN9.html  7GAV.html  7GAW.html  7GB5.html  7GB6.html  7GBD.html  7GBE.html  7GBI.html  7GBL.html  7GBN.html  7GBS.html  7GBV.html  7GBW.html  7GBX.html  7GBZ.html  7GCK.html  7GCQ.html  7GCV.html  7GCZ.html  7GD3.html  7GD4.html  7GD5.html  7GDC.html  7GDD.html  7GDI.html  7GDZ.html  7GE1.html  7GE2.html  7GE3.html  7GE4.html  7GE8.html  (+340 more)
mprov3_gine/results/classifications/fold_0/: classification_results.json
mprov3_gine/results/datasets/: data.pt  pdb_order.txt
mprov3_gine/results/trainings/: training_summary.json
mprov3_gine/results/visualizations/: 5RGV.html  5RGX.html  5RH2.html  5RH3.html  6M2N.html  7B2J.html  7CA8.html  7DDC.html  7EN8.html  7EN9.html  7GAV.html  7GAW.html  7GB5.html  7GB6.html  7GBD.html  7GBE.html  7GBI.html  7GBL.html  7GBN.html  7GBS.html  7GBV.html  7GBW.html  7GBX.html  7GBZ.html  7GCK.html  7GCQ.html  7GCV.html  7GCZ.html  7GD3.html  7GD4.html  7GD5.html  7GDC.html  7GDD.html  7GDI.html  7GDZ.html  7GE1.html  7GE2.html  7GE3.html  7GE4.html  7GE8.html  (+339 more)
mprov3_gine_explainer_defaults/: README.md  pyproject.toml
mprov3_gine_explainer_defaults/mprov3_gine_explainer_defaults/: __init__.py  best_fold.py  data_path_defaults.py  explainer_algorithm_defaults.py  explainer_name_validation.py  fold_indices.py  gine_architecture.py  gine_project_paths.py  pyg_explainer.py  pyg_mask_types.py  results_path_resolution.py  split_config.py  training_defaults.py
mprov3_ui/: README.md  pyproject.toml
mprov3_ui/src/mprov3_ui/: __init__.py  server.py
v2/: README.md  compare_explainers.py  pyproject.toml
v2/cli/: __init__.py  compare_explainers_cli.py
v2/explainers/: __init__.py  explainer_build.py  gnnexpl.py  gradexpinode.py  gradexpledge.py  guidedbp.py  igedge.py  ignode.py  pgexpl.py  pgmexpl.py
v2/explainers/shared/: __init__.py  explainer_builder.py
(+23 files in other folders)
