[project]
name = "mprov3-dui"
version = "0.1.0"
description = "Streamlit UI for hierarchical explainer ranking and LaTeX table export"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.23.0",
]

[project.scripts]
mprov3-dui = "mprov3_dui._cli:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
