[project]
name = "mprov3-explainer"
version = "0.1.0"
description = "MPro-GINE Explainer - PyTorch project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torch-geometric>=2.3.0",
    "torch-sparse",
    "torch-scatter",
    "pandas>=1.5.0",
    "numpy>=1.23.0,<2.0",
    "scikit-learn>=1.2.0",
    "tqdm>=4.65.0",
    "rdkit>=2023.3.1,<2025",
    "captum",
    "pgmpy",
    "dive-into-graphs",
    "mprov3-gine-explainer-defaults",
]

[tool.uv.sources]
mprov3-gine-explainer-defaults = { path = "../mprov3_gine_explainer_defaults", editable = true }

[tool.uv.extra-build-dependencies]
torch-sparse = ["torch"]
torch-scatter = ["torch"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mprov3_explainer"]

[dependency-groups]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
