[project]
name = "mprov3-gine-explainer-defaults"
version = "0.1.0"
description = "Shared MPro GINE + PyG Explainer defaults for thesis projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mprov3_gine_explainer_defaults"]
