[project]
name = "mprov3-ui"
version = "0.1.0"
description = "Web UI to browse GINE and Explainer results"
readme = "README.md"
authors = [
    { name = "Manuel Bueno", email = "mrbueno@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mprov3-ui = "mprov3_ui.server:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
