[project]
name = "compare-explainers-v2"
version = "0.1.0"
description = "Standalone explainer registry and PyG Explainer builders (v2)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "captum>=0.6.0",
    "torch-sparse",
    "torch-scatter",
    "numpy>=1.23.0,<2.0",
    "pandas>=1.5.0",
    "rdkit>=2023.3.1",
    "tqdm>=4.65.0",
    "pgmpy>=0.1.23",
    "mprov3-gine-explainer-defaults",
]

[tool.uv.sources]
mprov3-gine-explainer-defaults = { path = "../mprov3_gine_explainer_defaults", editable = true }

[tool.uv.extra-build-dependencies]
torch-sparse = ["torch"]
torch-scatter = ["torch"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["explainers", "cli"]
